# csvlineparser

./: .gitignore  LICENSE  Makefile  README.md  __main__.py  aware_csv_context_provider.py  char_tokenizer.py  csv_cleaner_consumer.py  csv_console_consumer.py  csv_consumer_interface.py  csv_data_type_mapping.py  csv_parser.py  csv_parser_tester.py  exceptions.py  multi_consumer.py  pyproject.toml  requirements.txt  setup.py
csvlineparser/: __init__.py  csv_cleaner_consumer.py  csv_context_provider.py  csv_parser.py  csv_parser_tester.py  exceptions.py
csvlineparser/clientutils/: aware_csv_context_provider.py  csv_cleaner_consumer.py  csv_console_consumer.py  csv_file_logger.py  file_handler.py
csvlineparser/core/: __init__.py  char_tokenizer.py  char_tokenizer_interface.py  column_expander.py  csv_context_provider.py  csv_data_type_mapping.py  csv_parser.py  csvlineparser.py  default_parser_config.py  exceptions.py  field_splitter.py  multi_consumer.py  parser_config.py
csvlineparser/excelexport/: __init__.py  csv_to_excel_exporter.py
examples/: example_parser.py  price_ccy_splitter.py  year_month_day_splitter.py
examples/in/: sample-raw-input.csv
src/csvlineparser/: __init__.py  aware_csv_context_provider.py  char_tokenizer.py  char_tokenizer_interface.py  csv_cleaner_consumer.py  csv_console_consumer.py  csv_consumer_interface.py  csv_context_provider.py  csv_data_type_mapping.py  csv_parser.py  csv_parser_tester.py  exceptions.py  multi_consumer.py
