[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "csvlineparser"
version = "0.0.3"
authors = [
  { name="raoulsson", email="" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/raoulsson/csvlineparser"
