[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "csvlineparser"
version = "1.0.0"
authors = [
    { name = "raoulsson", email = "hello@raoulsson.com" },
]
description = "A BNF grammar based CSV Parser that cleans up with messy CSV files, with optional Excel export"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/raoulsson/csvlineparser"
